# kaggle-ai-agent-security-multi-step-tool-attacks

./: .gitignore  CLAUDE.md  README.md
.claude/rules/: citations.md  dgx-long-runs.md  kaggle-notebook-workflow.md  leaderboard.md  readme-sync.md
docs/investigate/: 2026-06-21-first-dgx-llm-run.md  2026-06-21-first-kaggle-run-results.md  2026-06-21-first-llama-cpp-run.md  (+24 more)
docs/plans/: TODO.md  (+2 more)
jed-redteam-attack/: .dockerignore  Dockerfile  Dockerfile.llama  Dockerfile.vllm  Makefile  README.md  attack.py  dataset-metadata.json  dgx-kernel-metadata.json  dgx_notebook.ipynb  docker-compose.yml  kaggle_notebook.ipynb  kaggle_starter_fixed.ipynb  kernel-metadata-starter.json  kernel-metadata.json  local_harness.py  pyproject.toml  requirements-dev.txt  requirements-llm.txt  scoring.py  setup.py  vllm-serve.sh
jed-redteam-attack/aicomp_sdk/: __init__.py  llm_env.py
jed-redteam-attack/aicomp_sdk/attacks/: __init__.py
jed-redteam-attack/aicomp_sdk/core/: __init__.py  predicates.py
jed-redteam-attack/aicomp_sdk/fixtures/: file_seed.json  mail_seed.json  web_corpus.json
jed-redteam-attack/algorithms/: algo_a.py  algo_b.py  algo_c.py  algo_d.py  algo_e.py  scoring.py
jed-redteam-attack/docs/: 01-local-testing.md  02-algorithms.md  03-kaggle-notebook.md
jed-redteam-attack/payloads/: library.py
jed-redteam-attack/scripts/: harness-run.sh  llama-serve.sh  push-kaggle-dgx.sh  push-kaggle.sh  services.sh  test-template.py  vllm-serve.sh
jed-redteam-attack/tests/: test_sdk.py
tmp/: kaggle-discussion-712542-v312-reply.md  kaggle-discussion-dgx-spark-topic.md
(+1 files in other folders)
