[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aicomp_sdk"
version = "3.1.0.dev0"
description = "Local stub SDK for the Kaggle JED Red-Team Attack competition (aicomp_sdk-3.1.0)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["kaggle", "jed", "red-team", "agent-security", "llm"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = []

[project.optional-dependencies]
llm = ["openai>=1.30", "httpx>=0.27"]
dev = ["pytest>=7.4", "pytest-cov>=4.0"]

[tool.setuptools.packages.find]
include = ["aicomp_sdk*"]

[tool.setuptools.package-data]
"aicomp_sdk" = ["fixtures/*.json"]
